# projet-c-simple-clang-cmake-ninja

./: CMakeLists.txt
include/: button.h  gpio.h  led_control.h  main.h
src/: button.c  gpio.c  led_control.c  main.c
tests/: CMakeLists.txt  test_button.c
